fix(css): make scrollbar always visible (#807)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+:host {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 .router-wrapper {
   position: relative;
+  flex: 1 1 auto;
 }
